src/objects/Account_Statement_Transaction__c.object
<CustomObject>
    <description>Line detail for each transaction in account statements</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Currency Amount for this transaction. Depending on the type can be positive or negative value.</description>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <description>Description field</description>
        <label>Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Type__c</fullName>
        <description>Converts the Transaction type to a user friendly type using labels</description>
        <formula>CASE(TEXT(Transaction_Type__c),
	&apos;Automatic Match&apos;,$Label.Transaction_Type_Payment_Received,
	&apos;Billing Adjustement&apos;,$Label.Transaction_Type_Billing_Adjustment,
	&apos;Clawback&apos;,$Label.Transaction_Type_Clawback,
	&apos;Compensation&apos;,$Label.Transaction_Type_Compensation,
	&apos;Expected Remittance&apos;,&apos;Expected Remittance&apos;,
	&apos;Expected Settlement&apos;,&apos;Expected Settlement&apos;,
	&apos;Manual Match&apos;,$Label.Transaction_Type_Payment_Received,
	&apos;Post Billing Dispute&apos;,$Label.Transaction_Type_Billing_Adjustment,
	TEXT(Transaction_Type__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Payment__c</fullName>
        <description>True is the transaction type is one of the defined types as Payment</description>
        <formula>OR(
  ISPICKVAL(Transaction_Type__c, &quot;Automatic Match&quot;),
  ISPICKVAL(Transaction_Type__c, &quot;Manual Match&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Payment Types are: &quot;Automatic Match&quot; and &quot;Manual Match&quot;.
Otherwise this transaction is considered as Billing.</inlineHelpText>
        <label>Is Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Key__c</fullName>
        <description>This will be used to find the parent id when a record is inserted, so will only be mandatory when you don&apos;t provide a parent Id</description>
        <label>Parent Key</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <description>Master-detail relation to Account Statement object</description>
        <label>Account Statement</label>
        <referenceTo>Account_Statement__c</referenceTo>
        <relationshipLabel>Account Statement Transactions</relationshipLabel>
        <relationshipName>Account_Statement_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <description>Unique identifier from the external service muleSoft</description>
        <externalId>true</externalId>
        <label>Transaction Id</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <description>Type of transaction, some represent a positive and others a negative amount</description>
        <label>Transaction Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Automatic Match</fullName>
                </value>
                <value>
                    <fullName>Billing Adjustement</fullName>
                </value>
                <value>
                    <fullName>Billing Adjustment</fullName>
                </value>
                <value>
                    <fullName>Clawback</fullName>
                </value>
                <value>
                    <fullName>Compensation</fullName>
                </value>
                <value>
                    <fullName>Expected Remittance</fullName>
                </value>
                <value>
                    <fullName>Expected Settlement</fullName>
                </value>
                <value>
                    <fullName>Manual Match</fullName>
                </value>
                <value>
                    <fullName>Post Billing Dispute</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_Date__c</fullName>
        <description>Date when this transaction was applied</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <label>Account Statement Transaction</label>
    <nameField>
        <displayFormat>T-{0000000000}</displayFormat>
        <label>Account Statement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Statement Transactions</pluralLabel>
    <recordTypes>
        <fullName>ICE_Balance</fullName>
        <active>true</active>
        <description>Client Balance detail for Account Statements (ICE)</description>
        <label>ICE Balance</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>